# useful_clibs

./: .gitignore  readme.md
FreeType/: CMakeLists.txt
fontstash/: CMakeLists.txt
fontstash/example/: error.c  example.c
fontstash/src/: fontstash.c  fontstash.h
libjpeg-turbo-2.1.1/simd/: CMakeLists.txt
libmp3lame/: CMakeLists.txt
libmp3lame/h7/: h7_common.h  lame_dec_api.h  lame_dec_mp3.c  lame_dec_mp3.h  main.cpp
libmp3lame/lamemp3/: config.h  id3tag.c  mpglib_interface.c
libpng/: CMakeLists.txt
zlib/: CMakeLists.txt
